Bibsonomy updated to HTTPS https://blog.bibsonomy.org/2018/05/http-access-disabled.html, thus Java 1.8 version 101 or higher is needed to accept Let's encrypt cert, updated Readme to explain building the jar with the assembly plugin