@@ -16,7 +16,13 @@ A bundled jar file is generated under `bibsonomy-uploader-debian-cli/target`, th
 ```bash
 java -cp `find bibsonomy-uploader-debian-cli/target -name 'bibsonomy-uploader*jar'` org.aksw.bibuploader.BibUpdater username apikey apiurl bibtex-file
 ```
+## Building the jar
 
+mvn clean compile assembly:single
+
+## Note, only executable with Java 1-8-101 or higher
+
+java --add-modules java.xml.bind -jar target/bibsonomy-uploader-cli-0.9.0-SNAPSHOT-jar-with-dependencies.jar aksw "10bf465ccaaf41b95ebf5da80ef0ba4f" "http://www.bibsonomy.org/api" ~/Papers/bib/aksw.bib 
 
 ## Debian Package
 
